api bastante avanzada